# learnwords-tg

./: .gitignore  .gitmodules  brew-cross.ini  meson.build
src/: main.cpp  shared_pch.hpp
src/lw/application/: application.cpp  application.hpp  inventory.cpp  inventory.hpp  service_base.hpp
src/lw/application/service/: db.cpp  db.hpp  telegram.cpp  telegram.hpp  tg.cpp  tg.hpp  user_dialog.cpp  user_dialog.hpp
src/lw/database/: database.hpp  meson.build  prepare.cpp  prepare.hpp  prepare.mysql  queries.hpp
src/lw/database/query/: create.hpp  insert.hpp  select.hpp  update.hpp
src/lw/error/: code.cpp  code.hpp
src/lw/systemd/: credentials_storage.cpp  credentials_storage.hpp
src/lw/telegram/: connection.hpp  exception.cpp  exception.hpp  process_response.cpp  process_response.hpp
src/lw/telegram/proto/: error.hpp
src/lw/telegram/update/: allowed_updates.cpp  allowed_updates.hpp  interface.hpp  long_polling.cpp  long_polling.hpp  polling.cpp  polling.hpp  polymorphic_update.cpp  polymorphic_update.hpp
src/lw/util/: compat.hpp  credentials.cpp  credentials.hpp  first_flag.hpp  flag_set.hpp  meta.hpp  scoped.hpp
src/lw/util/asio/: co_initiate.hpp  coroutine.hpp
src/lw/util/http/: json_body.hpp
src/lw/util/json/: functional.hpp
src/lw/util/program_options/: enum_validator.hpp
subprojects/: .gitignore
